※update user's deliveryMethodId&paymentMethodId to SQL

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Pay.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Pay.cshtml
@@ -145,7 +145,7 @@
                     去結帳
                 </button>
             </div>
-            <div >
+            <div hidden>
                 @if (Model != null)
                 {
                     <input type="text" name="MerchantTradeNo" value="@Model.keyValuePairs["MerchantTradeNo"]" />
