--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/ForgetPassword.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/ForgetPassword.cshtml
@@ -26,6 +26,8 @@
     <link rel="stylesheet" href="~/css/custom.css">
     <!--myCss-->
     <link rel="stylesheet" href="~/css/myCss.css">
+    <!--SweetAlert2 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
 
     <style>
         .logo-wrapper:hover {
@@ -199,9 +201,6 @@
             integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
             crossorigin="anonymous"></script>
     <!--引用分離(Separate)-->
-    @*  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-    crossorigin="anonymous"></script> *@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js"
             integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ"
             crossorigin="anonymous"></script>
@@ -213,7 +212,7 @@
     <script src="~/js/jquery.superslides.min.js"></script>
     <script src="~/js/bootstrap-select.js"></script>
     <script src="~/js/inewsticker.js"></script>
-    <script src="~/js/bootsnav.js."></script>
+    @*<script src="~/js/bootsnav.js."></script>*@
     <script src="~/js/images-loded.min.js"></script>
     <script src="~/js/isotope.min.js"></script>
     <script src="~/js/owl.carousel.min.js"></script>
@@ -222,9 +221,10 @@
     <script src="~/js/contact-form-script.js"></script>
     <script src="~/js/custom.js"></script>
     <!--nav導覽與頁籤使用-->
-    <script src="~/js/myScript.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <!--SWEET ALERT-->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <script>
         // 這段 JavaScript 用於處理表單提交
@@ -252,10 +252,10 @@
                     var resultMsg = response.resultMsg; // 注意這裡使用小寫 resultMsg
 
                     if (errMsg) {
-                        alert(errMsg);
+                        Swal.fire(errMsg);
                         return false; // 失敗時返回 false
                     }
-                    alert(resultMsg);
+                    Swal.fire(resultMsg);
                     return true; // 成功時返回 true
                 },
                 error: function (err) {
