--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/ResetPassword.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/ResetPassword.cshtml
@@ -24,6 +24,8 @@
     <link rel="stylesheet" href="~/css/custom.css">
     <!--myCss-->
     <link rel="stylesheet" href="~/css/myCss.css">
+    <!--SweetAlert2 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
 
     <style>
         .logo-wrapper:hover {
@@ -75,13 +77,13 @@
                                         <div class="mb-3">
                                             <label for="NewUserPwd">新密碼：</label>
                                             <input type="text" class="form-control" id="NewUserPwd"
-                                                   placeholder="新密碼" required>
+                                                   placeholder="新密碼" hidden required>
                                             <div class="invalid-feedback"> 請輸入新密碼</div>
                                         </div>
                                         <div class="mb-3">
                                             <label for="CheckUserPwd">請再次確認新密碼</label>
                                             <input type="text" class="form-control" id="CheckUserPwd"
-                                                   placeholder="請再次確認新密碼" required>
+                                                   placeholder="請再次確認新密碼" hidden required>
                                             <div class="invalid-feedback"> 請確認新密碼</div>
                                         </div>
                                     </div>
@@ -92,7 +94,7 @@
                                 <div class="d-flex justify-content-center">
                                     <a>想起密碼了?</a><a style="color:#0072E3" asp-controller="MemberLogin" asp-action="Login">登入</a>
                                 </div>
-                                <!-- 使用 Bootstrap Modal 樣式，當執行有錯誤時，顯示錯誤訊息 -->
+                                @*<!-- 使用 Bootstrap Modal 樣式，當執行有錯誤時，顯示錯誤訊息 -->
                                 <div class="modal fade" id="ErrorAlert" tabindex="-1" role="dialog">
                                     <div class="modal-dialog modal-lg" role="document">
                                         <div class="modal-content">
@@ -104,7 +106,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div><!-- /.modal -->
+                                </div><!-- /.modal -->*@
 
                             </div>
                             <!--<div class="modal-footer" class="row gy-4"></div>-->
@@ -215,9 +217,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
             crossorigin="anonymous"></script>
-    <!--引用分離(Separate)-->
-    <!---->
-    <!-- ALL PLUGINS -->
+    <!--SWEET ALERT-->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!--nav導覽與頁籤使用-->
     <script src="~/js/myScript.js"></script>
     <script>
@@ -232,7 +233,7 @@
                 var checkPwd = form.elements["CheckUserPwd"].value;
 
                 if (newPwd !== checkPwd) {
-                    document.querySelector('#ErrorMsg').innerHTML = "密碼不相符";
+                    Swal.fire('密碼不相符');
                     return;
                 }
 
@@ -254,8 +255,17 @@
                         console.log('get response');
                         console.log(response);
                         if (response.ok == true) {
-                            alert('更新成功');
-                            window.location.href = '@Url.Content("~/MemberLogin/Login")';
+                            Swal.fire({
+                                title: '更新成功',
+                                icon: 'success',
+                                showConfirmButton: false, // 禁用確認按鈕
+                                timer: 2000 // 設置計時器，2秒後關閉視窗
+                            });
+
+                            // 延遲跳轉到登錄頁面
+                            setTimeout(function () {
+                                window.location.href = '@Url.Content("~/MemberLogin/Login")';
+                            }, 2000); // 2秒後跳轉
                         }
 
 
