--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/BanUser/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/BanUser/Index.cshtml
@@ -278,7 +278,8 @@
                     <thead>
                         <tr>
                             <th class="align-middle text-center">會員ID</th>
-                            <th class="align-middle text-center">會員名稱</th>
+                            <th class="align-middle text-center">會員信箱</th>
+                            <th class="align-middle text-center">會員驗證狀態</th>
                             <th class="align-middle text-center">會員暱稱</th>
                             <th class="align-middle text-center">禁言時間</th>
                             <th class="align-middle text-center">解除禁言時間</th>
@@ -321,7 +322,8 @@
             },
             "columns": [
                 { "data": "memberId" },
-                { "data": "memberAccount" },
+                { "data": "email" },
+                { "data": "emailVerified" },
                 { "data": "name" },
                 { "data": "bannedTime" },
                 { "data": "unBannedTime" },
