--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/ResetPassword.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/ResetPassword.cshtml
@@ -1,6 +1,4 @@
-﻿
-
-@{
+﻿@{
     Layout = null;
 }
 
@@ -36,6 +34,16 @@
         .main-top .formain-topSpan {
             color: #ffffff;
             letter-spacing: 2px;
+        }
+    </style>
+    <style type="text/css">
+        #resetPwdForm label.error {
+            color: red;
+            display: inline-block;
+            padding: 3px 3px;
+            font-size: 14px;
+            line-height: 1;
+            width: auto;
         }
     </style>
 </head>
@@ -74,16 +82,16 @@
                             <div class="">
                                 <form id="resetPwdForm">
                                     <div class="row ">
-                                        <div class="mb-3">
+                                        <div class="mb-3 form-group">
                                             <label for="NewUserPwd">新密碼：</label>
-                                            <input type="text" class="form-control" id="NewUserPwd"
-                                                   placeholder="新密碼" hidden required>
+                                            <input type="password" class="form-control NewUserPwds" id="NewUserPwd"
+                                                   placeholder="新密碼" required>
                                             <div class="invalid-feedback"> 請輸入新密碼</div>
                                         </div>
-                                        <div class="mb-3">
+                                        <div class="mb-3 form-group">
                                             <label for="CheckUserPwd">請再次確認新密碼</label>
-                                            <input type="text" class="form-control" id="CheckUserPwd"
-                                                   placeholder="請再次確認新密碼" hidden required>
+                                            <input type="password" class="form-control" name="CheckUserPwd" id="CheckUserPwd"
+                                                   placeholder="請再次確認新密碼" password required>
                                             <div class="invalid-feedback"> 請確認新密碼</div>
                                         </div>
                                     </div>
@@ -96,16 +104,16 @@
                                 </div>
                                 @*<!-- 使用 Bootstrap Modal 樣式，當執行有錯誤時，顯示錯誤訊息 -->
                                 <div class="modal fade" id="ErrorAlert" tabindex="-1" role="dialog">
-                                    <div class="modal-dialog modal-lg" role="document">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                                <h4 class="modal-title">錯誤訊息</h4>
-                                            </div>
-                                            <div class="modal-body" id="ErrorMsg" style="overflow-x:auto;width:100%;">
-                                            </div>
-                                        </div>
-                                    </div>
+                                <div class="modal-dialog modal-lg" role="document">
+                                <div class="modal-content">
+                                <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                <h4 class="modal-title">錯誤訊息</h4>
+                                </div>
+                                <div class="modal-body" id="ErrorMsg" style="overflow-x:auto;width:100%;">
+                                </div>
+                                </div>
+                                </div>
                                 </div><!-- /.modal -->*@
 
                             </div>
@@ -220,22 +228,61 @@
     <!--SWEET ALERT-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!--nav導覽與頁籤使用-->
-    <script src="~/js/myScript.js"></script>
+    <!--驗證欄位-->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
+    <script src="~/js/resetPasswordValidate.js"></script>
     <script>
         $(document).ready(function () {
-            $('#resetPwdBtn').click(function () {
-                DoResetPwd()
-            })
+            var resetPwdForm = $("#resetPwdForm");
+            var resetPwdBtn = $('#resetPwdBtn');
+            //自己這個站的 js
+            $("#resetPwdForm").validate({
+                submitHandler: function (form) {
+                    form.submit();
+                },
+                errorPlacement: function (error, element) {
+                    element.closest('.form-group').append(error);
+                },
+                rules: {
+                    // 可以加上特殊的規則
+                    CheckUserPwd: {
+                        equalTo:"#NewUserPwd"
+                    }
+                },
+                messages: {
+                    CheckUserPwd: {
+                        equalTo: "密碼不相符，請再重新輸入一次"
+                    }
+                }
+            });
+
+            resetPwdBtn.click(function () {
+                if (resetPwdForm.valid()) {
+                    // 表單驗證通過才可以執行更改密碼的步驟
+                    DoResetPwd();
+                }
+                else
+                {
+                    Swal.fire('請修改成符合規則的密碼')
+                }
+            });
+
+            //$('#resetPwdBtn').click(function () {
+            //    DoResetPwd()
+            //})
 
             function DoResetPwd() {
-                var form = document.forms["resetPwdForm"];
+                var form = resetPwdForm[0];
                 var newPwd = form.elements["NewUserPwd"].value;
                 var checkPwd = form.elements["CheckUserPwd"].value;
+                //var form = document.forms["resetPwdForm"];
+                //var newPwd = form.elements["NewUserPwd"].value;
+                //var checkPwd = form.elements["CheckUserPwd"].value;
 
-                if (newPwd !== checkPwd) {
-                    Swal.fire('密碼不相符');
-                    return;
-                }
+                //if (newPwd !== checkPwd) {
+                //    Swal.fire('密碼不相符');
+                //    return;
+                //}
 
                 //組合資料
                 var postData = {
@@ -269,30 +316,8 @@
                         }
 
 
-                        return true; // 成功時返回 true
-                        //if (response.ok) {
-                        //        console.log('in response.ok')
-                        //    console.log(response.json())
-                        //    console.log('ready return json')
-                        //    return response.json();
-                        //} else {
-                        //    throw new Error('Network response was not ok');
-                        //}
+                        return true;
                     })
-                //.then(function (data) {
-                //        console.log('indata')
-                //        console.log(data)
-                //        //console.log("Response data:", data);
-                //    if (data.ErrMsg) {
-                //        document.querySelector('#ErrorMsg').innerHTML = data.ErrMsg;
-                //    } else {
-                //        alert(data.ResultMsg);
-                //        location.href = '@Url.Content("~/MemberLogin/Login")';
-                //    }
-                //})
-                //.catch(function (error) {
-                //    document.querySelector('#ErrorMsg').innerHTML = "發生錯誤: " + error.message;
-                //});
             }
             var topAnnouncement = $('.formain-topSpan');
             console.log(topAnnouncement);
